--- a/composer.json
+++ b/composer.json
@@ -4,31 +4,11 @@
   "description": "Shipment extension module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1",
-    "spryker/currency": "^3.1.0",
-    "spryker/gui": "^3.0.0",
-    "spryker/kernel": "^3.13.0",
-    "spryker/money": "^2.0.0",
-    "spryker/propel-orm": "^1.0.0",
-    "spryker/sales": "^6.0.0 || ^7.0.0 || ^8.0.0",
-    "spryker/session": "^3.0.0 || ^4.0.0",
-    "spryker/store": "^1.0.0",
-    "spryker/symfony": "^3.0.0",
-    "spryker/tax": "^5.0.0",
-    "spryker/shipment-gui": "dev-master",
-    "spryker/util-text": "^1.1.0",
-    "spryker/zed-request": "^3.0.0"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "spryker/application": "*",
-    "spryker/calculation": "*",
-    "spryker/checkout": "*",
     "spryker/code-sniffer": "*",
-    "spryker/config": "*",
-    "spryker/country": "*",
-    "spryker/propel": "*",
-    "spryker/testify": "*",
-    "spryker/zed-navigation": "*"
+    "spryker/testify": "*"
   },
   "suggest": {
     "spryker/calculation": "If you want to use Calculation plugins.",
