CC-5271 Fix travis

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "spryker/shipment-extension",
   "type": "library",
-  "description": "Shipment extension module",
+  "description": "ShipmentExtension module",
   "license": "proprietary",
   "require": {
     "php": ">=7.1"
@@ -16,16 +16,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Spryker\\": "src/Spryker/",
-      "SprykerTest\\Shared\\Shipment\\Helper\\": "tests/SprykerTest/Shared/Shipment/_support/Helper/"
+      "Spryker\\": "src/Spryker/"
     }
   },
   "autoload-dev": {
     "psr-4": {
       "Config\\Module\\": "vendor/spryker/config/tests/_support/Module",
       "Propel\\Module\\": "vendor/spryker/propel/tests/_support/Module",
-      "Transfer\\Module\\": "vendor/spryker/transfer/tests/_support/Module",
-      "SprykerTest\\": "tests/SprykerTest/"
+      "Transfer\\Module\\": "vendor/spryker/transfer/tests/_support/Module"
     }
   },
   "minimum-stability": "dev",
